--- a/1.准备工作.md
+++ b/1.准备工作.md
@@ -1,24 +1,20 @@
-## 一、环境安装
+## 一，环境安装
 
 1. 编辑器：vscode，需要提前安装的插件有：Chinese（汉化），Python（解析器）
-
 2. Git && GitHub账号
+3. 命令行增强工具Cmder视频地址：
 
-3. 命令行增强工具Cmder  视频地址：
+## 二，Git的使用
 
-   
+1. 查看有没有安装git：cmd中输入git --version
 
-## 二、Git的使用
+2. gitconfig设置--git user --name“ Bruce”
 
-1. 查看有没有安装git：cmd中输入 git --version
+   git config --global user.email“ [XXX@qq.com](mailto:XXX@qq.com) ”
 
-2. git全局设置：git config --global user.name "Bruce"  
+3. 初始化本地仓库git init
 
-   git config --global user.email "XXX@qq.com"
-
-3. 初始化本地仓库 git init
-
-4. 新建 .gitignore文件 
+4. 新建.gitignore文件
 
    ```
    *.pyc
@@ -27,48 +23,44 @@
    .vscode
    ```
 
-   
+5. 删除已经上传的文件夹：
+
+   git rm -r --cached day1 \监视列表\ env
+
+   git commit -m“删除环境”
+
+   git推
 
 #### 本地仓库和远程仓库关联
 
-1. 检查是否已经创建了SSH密钥  cat ~/.ssh/id_rsa.pub 
-2. 如果上一步显示“No such file or directory”，这说明之前你没有生成过这个ssh密钥，需要先生成，使用ssh-keygen，不管提示任何东西，一路enter。
-3. id_rsa 是私钥，一定不能泄露出去。id_rsa.pub是公钥，用于身份认证
-4. 指定远程仓库地址  git remote add origin git@github.com:ITClubOfBruce/flaskweb.git
+1. 检查是否已经创建了SSH密钥cat〜/ .ssh / id_rsa.pub
+2. 如果上一步显示“ No such file or directory”，这说明之前你没有生成过这个ssh密钥，需要先生成，使用ssh-keygen，不管提示任何东西，一路进入。
+3. id_rsa是私钥，一定不能接入出去。id_rsa.pub是公钥，用于身份认证
+4. 指定远程仓库地址git remote add origin [git@github.com](mailto:git@github.com)：ITClubOfBruce / flaskweb.git
 
+## 三，安装虚拟环境
 
-
-## 三、安装虚拟环境
-
-1. pip+virtualenv+requirements.txt
-
+1. pip + virtualenv + requirements.txt
 2. python3自带的venv模块
-
 3. Pipenv模块
-
-   
 
 #### 本节课采用第二种
 
-python -m venv "虚拟环境名称"
+python -m venv“虚拟环境名称”
 
-激活虚拟环境   windows上 : env\Scripts\activate    Mac上:  . env/bin/activate
+激活虚拟环境windows上：env \ Scripts \ activate Mac上：。env / bin / activate
 
-widnows上vscode的终端中激活：. env\\\Scrpits\\\activate
-
-
+widnows上vscode的终端中激活：。env \\ Scrpits \\ activate
 
 #### 第一次提交
 
-git status   查看flaskweb文件夹下有哪些文件发生了变化
+git status查看flaskweb文件夹下有哪些文件发生了变化
 
-git add . 追踪变化的文件
+git添加 追踪变化的文件
 
-git commit -m "第一次提交，项目初始化完成"   提交到本地仓库
+git commit -m“第一次提交，项目初始化完成”提交到本地仓库
 
-git push -u origin master        "-u"参数会将推送到目标仓库和默认分支
-
-
+git push -u原始母版“ -u”参数重新定向到目标仓库和替代分支
 
 #### 运行本地开发服务器
 
@@ -82,15 +74,293 @@ def index():
     return "<h1>Hello Flask </h1>"
 ```
 
-flask run
+烧瓶运行
 
+```
+* Environment: production  //默认启动的时候是生产环境  
+   WARNING: This is a development server. Do not use it in a production deployment.
+   Use a production WSGI server instead.
+ * Debug mode: off  //调试模式，开发阶段一定要是on的状态
+ * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
+127.0.0.1 - - [02/Apr/2020 08:24:04] "GET / HTTP/1.1" 200 -
+```
 
+## 四，管理环境变量
 
+现在需要将production（生产环境）换成development（开发环境）
 
+我们在去启动Flask项目的时候，要跟两个环境变量打交道：FLASK_APP和FLASK_ENV
 
+我们的程序名字是app.py，所以暂时不需要去设置FLASK_APP；
 
+FLASK_APP
 
+FLASK_ENV：使用设置程序运行的环境，在生产时，在开发时，我们需要启动调试模式调试模式，调试模式需要通过将系统环境变量FLASK_ENV设置为开发来启动。调试模式开启后，当程序出错时，浏览器页面上会显示错误信息；代码移动后，程序会自动加载
 
+#### 使用python-dotenv管理系统环境变量
+
+安装pip install python-dotenv
+
+python-dotenv会从项目根目录的.flaskenv和.env文件读取环境变量并设置。我们需要创建这两个文件touch .flaskenv .env
+
+.flaskenv：用于存储Flask命令行系统相关的公共环境变量FLASK_ENV =开发
+
+.env：存储敏感数据，这个文件不能被提交到github
+
+```
+ * Environment: development
+ * Debug mode: on
+ * Restarting with stat
+ * Debugger is active!
+ * Debugger PIN: 240-556-127
+ * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
+```
+
+## 五，网址
+
+1. 多URL：一个视图函数可以绑定多个URL
+
+   ```
+   @app.route('/')
+   @app.route('/index')
+   @app.route('/home')
+   def index():
+       return "<h1>Hello Flask llaall </h1>"
+   ```
+
+2. 动态网址
+
+   ```
+   @app.route('/user/<name>')
+   def index(name):
+       return "<h1>Hello %s </h1>"%name
+   ```
+
+3. url_for（）
+
+   修改路由
+
+   生成URL：第一个参数是端点值，交替是视图函数的名称，静态资源替换是static
+
+   特点：在模板中可以直接使用`<img src={{ url_for('static',filename='static/images/avatar.jpg') }}>`但是在python文件中，需要先导入url_for
+
+## 六，模板模板
+
+模板：包含了变量和运算逻辑的HTML或其他格式的文本
+
+Jinja2完成渲染工作的
+
+{{}}标记变量
+
+{％％}标记语句
+
+{＃＃}注释
+
+## 七，静态资源
+
+## 八，数据库操作
+
+ORM：对象关系映射
+
+模型类：通过SQLAlchemy，通过定义Python类来表示数据库里的一张表（类的属性表示表中的分段/列），通过这个类进行各种操作来代替写SQL语句，这个类就是模型类FLask -SQL炼金术
+
+1. 安装pip install flask-sqlalchemy
+
+2. 引入扩展类，初始化实例
+
+   ```
+   from flask_sqlalchemy import SQLAlchemy
+   
+   app = Flask(__name__)
+   
+   db = SQLAlchemy(app)
+   ```
+
+3. 设置数据库URI
+
+   Flask提供了一个统一的接口来写入和获取这些配置变量：Flask.config字典，配置变量的名称必须使用大写，写入配置的语句一般会放到扩展类实例化语句之前
+
+4. 创建模型类
+
+   ```
+   # models 数据层
+   class User(db.Model):
+       id = db.Column(db.Integer,primary_key=True)
+       name = db.Column(db.String(20))
+   
+   class Movie(db.Model):
+       id = db.Column(db.Integer,primary_key=True)
+       title = db.Column(db.String(60))
+       year = db.Column(db.String(4))
+   ```
+
+   db.Integer整型db.Text长文本db.DateTime时间日期
+
+   db.String（size）基线db.Float（）浮点数db.Boolean布尔值
+
+   primary_key = True设置当前局部是否为主键
+
+   nullable布尔值，是否允许为空值
+
+   index布尔值，是否设置索引
+
+   布尔值，是否允许重复值
+
+   默认默认值
+
+5. 创建数据表
+
+   ```
+   flask shell
+   from app import db
+   db.create_all()
+   ```
+
+   如果您放置了这个模型类，想重新生成表模型，需要先使用db.drop_all（）删除表，然后重新创建
+
+   flask initdb初始化数据库
+
+   flask initdb --drop删除之后再创建
+
+   ```
+   # 自定义命令
+   @app.cli.command()  # 注册为命令
+   @click.option('--drop',is_flag=True,help="先删除再创建")
+   def initdb(drop):
+       if drop:
+           db.drop_all()
+       db.create_all()
+       click.echo("初始化数据库完成")
+   ```
+
+6. 数据库的增删改查
+
+   增加
+
+   ```
+   >>> from app import db
+   >>> from app import User,Movie 
+   >>> user = User(name='Bruce')
+   >>> movie1 = Movie(title='杀破狼',year='2000')
+   >>> movie2 = Movie(title='战狼',year='2016')
+   >>> db.session.add(user)  //把新创建的记录添加到数据库会话
+   >>> db.session.add(movie1)
+   >>> db.session.add(movie2)
+   >>> db.session.commit()  //提交数据库会话，只需要在最后执行一次即可
+   ```
+
+   读取
+
+   模型类.query。过滤方法。查询方法
+
+   ```
+   >>> Movie.query.filter_by(title='战狼').first()
+   >>> Movie.query.filter(Movie.title=="战狼").first()
+   ```
+
+   | 过滤方法        | 说明                                         |
+   | --------------- | -------------------------------------------- |
+   | 过滤（）        | 使用指定的规则过滤记录，返回新产生的查询对象 |
+   | 过滤（）        |                                              |
+   | order_by（）    | 根据指定条件对记录进行排序                   |
+   | 通过...分组（） | 分组                                         |
+
+   | 查询方法         |                        |
+   | ---------------- | ---------------------- |
+   | 所有（）         |                        |
+   | 第一（）         |                        |
+   | get（id）        |                        |
+   | 计数（）         | 返回查询结果的数量     |
+   | first_or_404     |                        |
+   | get_or_404（id） |                        |
+   | 分页             | 返回一个分页对象，分页 |
+
+   更新
+
+   ```
+   >>> from app import db,Movie
+   >>> movie = Movie.query.get(2)
+   >>> movie.title
+   '战狼'
+   >>> movie.title="战狼2"
+   >>> movie.year
+   '2016'
+   >>> movie.year = '2018'
+   >>> db.session.commit()
+   ```
+
+   删除
+
+   ```
+   >>> movie = Movie.query.get(1)
+   >>> db.session.delete(movie)
+   >>> db.session.commit()
+   ```
+
+## 九，自定义错误页面，错误处理函数，模板继承，模板某些处理函数
+
+1. 自定义错误页面
+
+2. 错误处理函数
+
+   ```
+   # 错误处理函数
+   @app.errorhandler(404)
+   def page_not_found(e):
+       user = User.query.first()
+       return render_template('404.html',user=user)
+   ```
+
+3. 模板正文处理函数
+
+   ```
+   # 模板上下文处理函数
+   @app.context_processor
+   def common_user():
+       user = User.query.first()
+       return dict(user=user)
+   ```
+
+   这个函数的返回值是一个字典，会统一注入到每个模板的某些环境中，因此可以在模板中直接使用
+
+4. 模板继承
+
+## 十，表单
+
+1. 报错
+
+   ```
+   Method Not Allowed
+   The method is not allowed for the requested URL.
+   ```
+
+   原因：我们的表单发送的是POST请求，但是视图函数唯一只能处理GET请求
+
+   修改视图函数@ app.route（'/'，methods = ['GET'，'POST']）
+
+   GET：返回渲染后的页面
+
+   POST：获取表单传递过来的数据
+
+2. 验证数据，给用户以提示信息
+
+   flask中的flash模块来做提示，在python文件中通过flash（'输入错误'），通过get_flashed_messages（）来展示到模板
+
+   ```
+      <！-flash消息->
+       {％代表get_flashed_messages（）中的消息％}
+           < div  class =“ alert ” > {{消息}} </ div >
+       {％endfor％}
+       < 导航>
+   ```
+
+3. 报错：该会话不可用，因为未设置任何秘密密钥。将应用程序上的secret_key设置为唯一且秘密的内容。
+
+   flash（）函数在内部会把消息存储到Flask提供的会话对象中。会话在请求间存储数据，它会把数据签名后存储到浏览器的Cookie中，所以我们需要设置前面所需的密钥
+
+   ```
+   app.config['SECRET_KEY'] = '1903_dev'
+   ```
 
 
 
