--- a/1.准备工作.md
+++ b/1.准备工作.md
@@ -249,7 +249,7 @@ ORM：对象关系映射
    >>> db.session.commit()  //提交数据库会话，只需要在最后执行一次即可
    ```
 
-   读取
+   读取 
 
    模型类.query。过滤方法。查询方法
 
@@ -261,19 +261,19 @@ ORM：对象关系映射
    | 过滤方法        | 说明                                         |
    | --------------- | -------------------------------------------- |
    | 过滤（）        | 使用指定的规则过滤记录，返回新产生的查询对象 |
-   | 过滤（）        |                                              |
+   | 过滤（）        | 使用指定的规则过滤记录，返回新产生的查询对象 |
    | order_by（）    | 根据指定条件对记录进行排序                   |
    | 通过...分组（） | 分组                                         |
 
-   | 查询方法         |                        |
-   | ---------------- | ---------------------- |
-   | 所有（）         |                        |
-   | 第一（）         |                        |
-   | get（id）        |                        |
-   | 计数（）         | 返回查询结果的数量     |
-   | first_or_404     |                        |
-   | get_or_404（id） |                        |
-   | 分页             | 返回一个分页对象，分页 |
+   | 查询方法         |                                  |
+   | ---------------- | -------------------------------- |
+   | 所有（）         | all（）                          |
+   | 第一（）         | first（）                        |
+   | get（id）        | get出来的单个数据                |
+   | 计数（）         | 返回查询结果的数量               |
+   | first_or_404     | 第一条数据没有的话报错找不到     |
+   | get_or_404（id） | 获取第一条数据没有的话报错找不到 |
+   | 分页             | 返回一个分页对象，分页           |
 
    更新
 
