--- a/1.准备工作.md
+++ b/1.准备工作.md
@@ -362,5 +362,33 @@ ORM：对象关系映射
    app.config['SECRET_KEY'] = '1903_dev'
    ```
 
+## 十一、用户认证
+
+1. 什么是用户认证？登录注册，
+
+2. 为什么要有用户认证呢？  权限问题，普通用户和管理员用户的权限不一样
+
+3. Flask中怎么做？密码不能是明文。
+
+4. 步骤
+
+   引入：from werkzeug.security import generate_password_hash,check_password_hash
+
+   登录：Flask-Login  首先是安装  pip install flask-login
+
+   ```
+   from flask_login import LoginManager
+   
+   login_manager = LoginManager(app) # 实例化扩展类
+   @login_manager.user_loader
+   def load_user(user_id): # 创建用户加载回调函数，接收用户ID作为参数
+       user = User.query.get(user_id)
+       return user
+   ```
+
+   Flask_Login 提供了一个current_user变量，如果用户已经登录，current_user变量的值就是当前用户的用户模型类记录
+
+   使User模型类继承Flask_Login提供的UserMixin，is_authenticated属性：如果当前用户已经登录，current_user.is_authenticated 就是True，否则就是False
+
 
 
